--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ sdes4j (1.1.4-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Use secure copyright file specification URI.
+  * Update watch file format version to 4.
 
  -- Debian Janitor <janitor@jelmer.uk>  Fri, 30 Dec 2022 11:21:02 -0000
 
