--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sdes4j (1.1.4-2) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Fri, 30 Dec 2022 11:21:02 -0000
+
 sdes4j (1.1.4-1) unstable; urgency=low
 
   * Initial release (Closes: #835044)
