--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ sdes4j (1.1.4-2) UNRELEASED; urgency=medium
   * Use secure copyright file specification URI.
   * Update watch file format version to 4.
   * Bump debhelper from deprecated 9 to 10.
+  * Remove unnecessary get-orig-source-target.
 
  -- Debian Janitor <janitor@jelmer.uk>  Fri, 30 Dec 2022 11:21:02 -0000
 
